[package]
name = "totp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
base32 = "0.4.0"
bincode = "1.3.3"
hmac = "0.12.0"
serde = { version = "1.0.132", features = ["derive"] }
sha-1 = "0.10.0"
structopt = "0.3.25"
thiserror = "1.0.30"
